[package]
name = "control"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = [
 "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-rp = { version = "0.8.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-time = "0.5.0"
heapless = "0.9.1"
panic-probe = "1.0.0"
